--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Quicksand:wght@300&family=Silkscreen&display=swap" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
